--- a/two.html
+++ b/two.html
@@ -7,7 +7,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    Hello world
+    <button onclick="call()">Call</button>
     <script src="script.js"></script>
   </body>
 </html>
