--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <input id= "name"type="text">
     <button onclick="yo()">Click</button>
     <script src="script.js"></script>
+    <a href="two.html">
   </body>
 </html>
