--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <input id= "name"type="text">
     <button onclick="yo()">Click</button>
     <script src="script.js"></script>
-    <a href="two.html">
+    <a href="two.html">hi</a>
+      
   </body>
 </html>
