--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <input id= "name"type="text">
-    <button onclick="yo()">Click</button>
+    <input id= "username"type="text">
+    <button onclick="getName()">Click</button>
     <script src="script.js"></script>
     <a href="two.html">hi</a>
       
