--- a/two.html
+++ b/two.html
@@ -7,7 +7,9 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <button onclick="call()">Call</button>
-    <script src="script.js"></script>
+    <script src="script.js">
+    getUser();
+    </script>
+     <a href="index.html">hi</a>
   </body>
 </html>
