--- a/two.html
+++ b/two.html
@@ -7,6 +7,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <p id="placeholder"></p>
     <script src="script.js">
     getUser();
     </script>
