--- a/two.html
+++ b/two.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <script src="script.js"></script>
   </head>
   <body>
     <p id="placeholder"></p>
-    <script src="script.js">
+    <script>
     getUser();
     </script>
      <a href="index.html">hi</a>
