--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <input id= "username"type="text">
-    <button onclick="getUser()">Get User</button>
+    <button onclick="getName()">Get User</button>
     <script src="script.js"></script>
     <a href="two.html">hi</a>
       
