--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <body>
     <input id= "username"type="text">
     <button onclick="getName()">Get User</button>
+    <input type="text"id="textfield">
+    <button onclick="saveName()">Next</button>
     <script src="script.js"></script>
     <a href="two.html">hi</a>
       
