--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <input id= "username"type="text">
-    <button onclick="getName()">Get User</button>
+   <!-- <input id= "username"type="text">
+    <button onclick="getName()">Get User</button>-->
     <input type="text"id="textfield">
     <button onclick="saveName()">Next</button>
     <script src="script.js"></script>
